--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "tv",
+  "name": "spotify-chromecast-player",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "author": "",
-  "license": "ISC",
+  "author": "aartek",
+  "license": "MIT",
   "scripts": {
     "start": "node src/index.js"
   },
